--- a/public/app.css
+++ b/public/app.css
@@ -8,52 +8,12 @@ html {
     height: 100%;
 }
 
-body{
-    position: relative;
-    height: 100%;
-}
-
-.badge {
-    padding-left: 9px;
-    padding-right: 9px;
-    -webkit-border-radius: 9px;
-    -moz-border-radius: 9px;
-    border-radius: 9px;
-}
-
-.label-warning[href],
-.badge-warning[href] {
-    background-color: #c67605;
-}
-#lblCartCount {
-    font-size: 15px;
-    background: #ffffff;
-    color: black;
-    padding: 0 5px;
-    vertical-align: top;
-    margin-left: -4px;
-}
-
 body, html {
-    height: 100%
+    height: 100%;
+    scroll-behavior: smooth;
 }
 
-footer {
-    margin-top: 10px;
-    padding-top: 10px;
-    background-color: #222;
-}
-
-.windows-svg {
-    display: inline-block;
-    vertical-align: middle;
-}
-
-.float-to-left {
-    margin-left: 10px;
-    position: absolute;
-    max-width: 100px;
-}
-.padding-right {
-    padding: 100px;
+#werkervaring, #opleidingen, #wiebenik {
+    margin-top: 100%;
+    padding-bottom: 25%;
 }
