--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,3 @@
-@import "product.css";
-
 main {
     position: relative;
     min-height: 100vh;
@@ -10,9 +8,10 @@ html {
     height: 100%;
 }
 
-body{
+body {
     position: relative;
     height: 100%;
+    background-color: red;
 }
 
 .badge {
